@@ -38,9 +38,14 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "gripes.h"
 #include "pr-output.h"
 
-int octave_complex::t_id = -1;
+octave_allocator
+octave_complex::allocator (sizeof (octave_complex));
 
-const string octave_complex::t_name ("complex scalar");
+int
+octave_complex::t_id (-1);
+
+const string
+octave_complex::t_name ("complex scalar");
 
 octave_value *
 octave_complex::try_narrowing_conversion (void)
